--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -3,7 +3,7 @@
   background: papayawhip;
   display: flex;
   align-items: center;
-  padding: 8px 8px;
+  padding: 8px;
   justify-content: space-between;
 }
 
