--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,23 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.main {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 52px;
+  justify-content: center;
+}
+
+.styled {
+  display: flex;
+  flex-flow: column nowrap;
+  width: 200px;
+  text-align: center;
+  align-items: center; 
 }
 
 /* do not edit this footer */
